Bug 921522 - Use already-established flex container content-box main size to determine packing space, instead of checking reflow state. r=mats, a=lsblakk